# cookiecutter-rye

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .bumpversion.cfg  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: __init__.py  cli.py
